initial attempt to paginate search results

--- a/src/CSS/homePage.css
+++ b/src/CSS/homePage.css
@@ -1,6 +1,7 @@
 .homepage-container {
-    align-items: center;
+    position: relative;
     justify-content: center;
+    top: 50%;
     height: 100%;
     width: 100%;
 }
