--- a/src/CSS/searchPage.css
+++ b/src/CSS/searchPage.css
@@ -8,7 +8,6 @@
     position: relative;
     display: inline-block;
     justify-content: center;
-    display: inline-block;
     top: 49.3%;
     margin-bottom: 0% !important;
 }
@@ -17,7 +16,6 @@
     position: relative;
     display: inline-block;
     justify-content: center;
-    display: inline-block;
     top: 5% !important;
     margin-bottom: 0% !important;
 }
@@ -35,23 +33,6 @@
     justify-content: center;
     margin: auto !important;
     top: 50%;
-}
-
-.searchResult-container {
-    position: relative;
-    justify-content: center;
-    top: 10%;
-    height: 80%;
-    width: 100%;
-}
-
-.searchResult-box {
-    height: 100%;
-    width: 80%;
-    margin: auto;
-    border-radius: 25px;
-    border: 2px solid;
-    background-color:ivory;
 }
 
 p {
@@ -86,4 +67,16 @@ p {
     margin-left: 55%;
     background-color: white;
     box-shadow: -3px -4px 12px 0px rgba(0,0,0,0.7);
+}
+
+.geneResult-align {
+    position: relative;
+    float: left;
+    margin-left: 15%;
+    margin-right: auto;
+}
+
+.matchProportion-align {
+    position: relative;
+    margin-left: 60%;
 }
