Paginate genes found in isolates

--- a/src/CSS/isolateDisplay.css
+++ b/src/CSS/isolateDisplay.css
@@ -31,3 +31,10 @@
     margin-top: auto;
     margin-bottom: auto;
 }
+
+.searchResult-box {
+    position: absolute !important;
+    height: 500% !important;
+    width: 80% !important;
+    margin: auto;
+}
