--- a/src/CSS/paginateResults.css
+++ b/src/CSS/paginateResults.css
@@ -10,7 +10,8 @@
     height: 100%;
     width: 80%;
     margin: auto;
-    border-radius: 15px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
     border: 2px solid;
     background-color:ivory;
 }
@@ -26,11 +27,13 @@
 
 .searchResult-bar {
     background-color: gainsboro;
-    border-radius: 30px;
+    border-top-left-radius: 14px;
+    border-top-right-radius: 14px;
     position: relative;
     width: 100%;
     display: flex;
     flex-direction: row;
+    border-bottom: 3px ridge DarkGray;
 }
 
 .searchResult-bar-genetext {
@@ -89,4 +92,18 @@
     float: right;
     margin-right: 37.5%;
     margin-left: auto;
+}
+
+.searchResult-items-columned {
+    position: relative;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.searchResult-genesContained-column{
+    position: relative;
+    display: inline-block;
+    margin-left: 3%;
+    margin-right: 3%;
 }
