--- a/src/CSS/isolateDisplay.css
+++ b/src/CSS/isolateDisplay.css
@@ -31,3 +31,10 @@
     margin-top: auto;
     margin-bottom: auto;
 }
+
+.geneDisplay-endpoint {
+    float: left;
+    position: absolute;
+    margin-left: 1%;
+    margin-top: 1%;
+}
