--- a/src/CSS/searchPage.css
+++ b/src/CSS/searchPage.css
@@ -36,11 +36,12 @@
 }
 
 p {
-    margin-bottom: 0.18rem;
+    margin-bottom: 0.17%;
 }
 
 .isolate-returned {
     flex-direction: column;
+    position: relative;
 }
 
 .isolate-link {
@@ -50,23 +51,19 @@ p {
 .isolate-link:hover .isolate-summary {
     visibility: visible;
     position: absolute;
-    margin-left: 55%;
-    background-color: white;
-    box-shadow: -3px -4px 12px 0px rgba(0,0,0,0.7);
+    margin-left: 13%;
+    background-color: ivory;
+    border-radius: 15px;
+    border: 2px solid;
+    z-index: 2;
+    width: 30%;
 }
 
 .isolate-summary {
     visibility: hidden;
     position: absolute;
-    margin-left: 55%;
-}
-
-.isolate-summary:hover {
-    visibility: visible;
-    position: absolute;
-    margin-left: 55%;
-    background-color: white;
-    box-shadow: -3px -4px 12px 0px rgba(0,0,0,0.7);
+    margin-left: 5%;
+    z-index: 2;
 }
 
 .geneResult-align {
@@ -79,4 +76,62 @@ p {
 .matchProportion-align {
     position: relative;
     margin-left: 60%;
+}
+
+.isolate-link-biosample {
+    position: relative;
+    margin-left: 4.5%;
+    float: left;
+    z-index: 1;
+}
+
+.isolate-link-organismname {
+    float: left;
+    position: absolute;
+    margin-left: 15%;
+    z-index: 1;
+}
+
+.isolate-link-genomerepresentation {
+    float: left;
+    position: absolute;
+    margin-left: 40%;
+}
+
+.isolate-link-sequencecount {
+    float: left;
+    position: absolute;
+    margin-left: 59.5%;
+}
+
+.isolate-link-assembly-sequenceURL {
+    display: inline-block;
+    position: relative;
+    margin-left: 55%;
+}
+
+.searchResults-brief {
+    position: absolute;
+    float: left;
+    margin-left: 48%;
+    margin-top: 2.6%;
+}
+
+#sequenceResult-brief-font {
+    font-size: 14px;
+    color: black;
+    font-weight: normal;
+}
+
+.isolate-link-read-sequenceURL {
+    position: relative;
+    display: inline-block;
+    margin-left: 55%;
+    width: 20%;
+}
+.readResult-fastlinks {
+    position: relative;
+    display: inline-block;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
 }
