List isolates in paper example

--- a/src/CSS/paginateResults.css
+++ b/src/CSS/paginateResults.css
@@ -131,3 +131,9 @@
     width: 100%;
     text-align: center;
 }
+
+.searchResult-bar-allisolatesbiosample {
+    position: relative;
+    width: 100%;
+    justify-content: center;
+}
