--- a/src/CSS/paginateResults.css
+++ b/src/CSS/paginateResults.css
@@ -137,3 +137,10 @@
     width: 100%;
     justify-content: center;
 }
+
+.pagination-navigation {
+    position: relative;
+    width: 100%;
+    margin-top: 0.25%;
+    justify-content: center;
+}
