--- a/src/CSS/paginateResults.css
+++ b/src/CSS/paginateResults.css
@@ -44,7 +44,7 @@
 .searchResult-bar-matchproportion {
     position: relative;
     display: inline-block;
-    margin-left: 76%;
+    margin-left: 55.5%;
 }
 
 .searchResult-bar-paper {
@@ -143,4 +143,22 @@
     width: 100%;
     margin-top: 0.25%;
     justify-content: center;
+}
+
+.geneResult-name {
+    position: relative;
+    margin-left: 14%;;
+    margin-right: auto;
+}
+
+.geneResult-aliases {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.geneResult-description {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
 }
