--- a/src/CSS/searchFilters.css
+++ b/src/CSS/searchFilters.css
@@ -49,3 +49,25 @@
     max-width: 21%;
     margin-left: 68%;
 }
+
+.filterOptions-options-contigs-container {
+    position: absolute;
+    width: 100%;
+    margin-top: 18%;
+}
+
+.contig-label {
+    position: relative;
+    float: left;
+    margin-left: 4%;
+    margin-right: 2%;
+}
+
+#contig-label-font {
+    font-size: 15px;
+}
+
+.contig-input {
+    position: relative;
+    width: 30.5%;
+}
