Font sizes of components dynamically respond to screen size

--- a/src/CSS/searchPage.css
+++ b/src/CSS/searchPage.css
@@ -177,7 +177,7 @@ p {
 }
 
 #sequenceResult-brief-font {
-    font-size: 14px;
+    font-size: 1.43vh;
     color: black;
     font-weight: normal;
 }
