--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,19 @@
     transform: rotate(360deg);
   }
 }
+
+#medium-font {
+  font-size: 1.43vh;
+}
+
+#mediumLarge-font {
+  font-size: 1.64vh;
+}
+
+#large-font {
+  font-size: 2.05vh;
+}
+
+#header-font {
+  font-size: 2.66vh;
+}
