--- a/src/CSS/geneDisplay.css
+++ b/src/CSS/geneDisplay.css
@@ -1,4 +1,4 @@
-.isolateItem{
+.isolateItem {
     border-bottom: 5px solid black;
     max-height: 30%;
     position: relative;
@@ -8,13 +8,37 @@
 
 .isolateResult-align {
     position: relative;
-    float: left;
     margin-left: 2%;
     margin-right: auto;
     height: 100%;
 }
 
-.sequenceResult-align {
+.isolateGenes-info {
     position: relative;
-    margin-left: 20%;
+    display: flex;
+    width: 100%;
+}
+
+.isolateGeneCount {
+    position: relative;
+    display: inline;
+    justify-content: left;
+    margin-left: 45%;
+}
+
+.msa-button {
+    position: relative;
+    display: inline;
+    width: 19%;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: 10%;
+    background-color: gainsboro;
+    border-radius: 8px;
+    border: 2px solid;
+    margin-bottom: 0.2%;
+}
+
+.msa-button:hover {
+    background-color: white;
 }
