Replace paper references with study and land on search page

--- a/src/CSS/paginateResults.css
+++ b/src/CSS/paginateResults.css
@@ -47,7 +47,7 @@
     margin-left: 55.5%;
 }
 
-.searchResult-bar-paper {
+.searchResult-bar-study {
     position: relative;
     width: 100%;
     text-align: center;
