--- a/src/CSS/searchPage.css
+++ b/src/CSS/searchPage.css
@@ -4,6 +4,12 @@
     height: 100%;
 }
 
+.about-link {
+    position: absolute;
+    margin-top: 1%;
+    margin-left: 55%;
+}
+
 .mb-3 {
     position: relative;
     display: inline-block;
