--- a/src/CSS/isolateDisplay.css
+++ b/src/CSS/isolateDisplay.css
@@ -1,7 +1,7 @@
 .isolate-grid {
     display: inline-grid;
-    grid-template-columns: 33% 33% 33%;
-    padding: 2% 5% 0.5% 5%;
+    grid-template-columns: 25%;
+    padding: 2% 2% 0.5% 9.5%;
     height: 100%;
     width: 100%
 }
@@ -30,13 +30,25 @@
     margin-bottom: auto;
 }
 
-.contig-stats {
+.additional-stats {
     position: relative;
     text-align: left;
     width: 100%;
     height: 100%;
     grid-column-start: 3;
     grid-column-end: 4;
+    grid-row:1;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.contig-stats {
+    position: relative;
+    text-align: left;
+    width: 100%;
+    height: 100%;
+    grid-column-start: 4;
+    grid-column-end: 5;
     grid-row:1;
     margin-top: auto;
     margin-bottom: auto;
