--- a/src/CSS/searchPage.css
+++ b/src/CSS/searchPage.css
@@ -20,7 +20,7 @@
 
 .mb-3-used{
     position: relative;
-    display: inline-block;
+    display: flex;
     justify-content: center;
     top: 5% !important;
     margin-bottom: 0% !important;
