--- a/src/CSS/geneDisplay.css
+++ b/src/CSS/geneDisplay.css
@@ -1,44 +1,15 @@
-.isolateItem {
-    border-bottom: 5px solid black;
-    max-height: 30%;
-    position: relative;
-    margin-top: 0.5%;
-    border-bottom-width: thin;
+.acid-A {
+  background-color: #faa;
 }
-
-.isolateResult-align {
-    position: relative;
-    margin-left: 2%;
-    margin-right: auto;
-    height: 100%;
+.acid-T {
+  background-color: #aaf;
 }
-
-.isolateGenes-info {
-    position: relative;
-    display: flex;
-    width: 100%;
+.acid-G {
+  background-color: #afa;
 }
-
-.isolateGeneCount {
-    position: relative;
-    display: inline;
-    justify-content: left;
-    margin-left: 45%;
+.acid-C {
+  background-color: #ffa;
 }
-
-.msa-button {
-    position: relative;
-    display: inline;
-    width: 19%;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: 10%;
-    background-color: gainsboro;
-    border-radius: 8px;
-    border: 2px solid;
-    margin-bottom: 0.2%;
-}
-
-.msa-button:hover {
-    background-color: white;
+.acid-N {
+  background-color: #ddd;
 }
