--- a/src/CSS/searchPage.css
+++ b/src/CSS/searchPage.css
@@ -1,286 +1,17 @@
-.search-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-.about-link {
-    position: absolute;
-    margin-top: 1%;
-    margin-left: 55%;
-}
-
-.mb-3 {
-    position: relative;
-    display: inline-block;
-    justify-content: center;
-    top: 49.3%;
-    margin-bottom: 0% !important;
-}
-
-.mb-3-used{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    top: 5% !important;
-    margin-bottom: 0% !important;
-}
-
-.search-spinner {
-    display: inline-block;
-    position: absolute;
-    justify-content: center;
-    margin-left: 1%;
-    top: 50%
-}
-
-.search-spinner-used {
-    position: absolute;
-    justify-content: center;
-    margin: auto !important;
-    top: 50%;
-}
-
-p {
-    margin-bottom: 0.17%;
-}
-
-.isolate-returned {
-    flex-direction: column;
-    position: relative;
-}
-
-.isolate-returned:hover {
-    background-color: #f2f2f2;
-    border: 1px ridge gainsboro;
-}
-
-.paper-returned {
-    background-color: white;
-}
-
-.paper-returned:hover {
-    background-color: #f2f2f2;
-    border: 1px ridge gainsboro;
-}
-
-.gene-returned {
-    background-color: white;
-    position: relative;
-    display: flex;
-}
-
-.gene-returned:hover {
-    background-color: #f2f2f2;
-    border: 1px ridge gainsboro;
-}
-
-.gene-returned-name{
-    position: relative;
-    float: left;
-    margin-left: 1% !important;
-    width: 33%;
-}
-
-.gene-returned-aliases {
-    position: relative;
-    float: left;
-    width: 33%;
-}
-
-.gene-returned-aliases-item{
-    position: relative;
-    display: inline;
-    text-align: center;
-    padding-left: 3%;
-    padding-right: 3%;
-}
-
-.gene-returned-description {
-    position: relative;
-    width: 33%;
-}
-.sequence-returned {
-    background-color: white;
-}
-
-.sequence-returned:hover {
-    background-color: #f2f2f2;
-    border: 1px ridge gainsboro;
-}
-
-.isolate-link {
-    position: relative;
-}
-
-.isolate-link:hover .isolate-summary {
-    visibility: visible;
-    position: absolute;
-    margin-left: 13%;
-    background-color: #f2f2f2;
-    border-radius: 15px;
-    border: 2px solid;
-    z-index: 2;
-    width: 30%;
-}
-
 .isolate-summary {
-    visibility: hidden;
-    position: absolute;
-    margin-left: 5%;
-    z-index: 2;
+  visibility: hidden;
+  position: absolute;
+  z-index: 2;
 }
-
-.geneResult-align {
-    position: relative;
-    float: left;
-    margin-left: 15%;
-    margin-right: auto;
+.isolate-summary p {
+  margin-top: .75rem;
+  line-height: .25;
 }
-
-.matchProportion-align {
-    position: relative;
-    margin-left: 60%;
-}
-
-.isolate-link-biosample {
-    position: relative;
-    margin-left: 4.5%;
-    float: left;
-    z-index: 1;
-}
-
-.isolate-link-organismname {
-    float: left;
-    position: absolute;
-    margin-left: 15%;
-    z-index: 1;
-}
-
-.isolate-link-genomerepresentation {
-    float: left;
-    position: absolute;
-    margin-left: 40%;
-}
-
-.isolate-link-sequencecount {
-    float: left;
-    position: absolute;
-    margin-left: 59.5%;
-}
-
-.isolate-link-assembly-sequenceURL {
-    display: inline-block;
-    position: relative;
-    margin-left: 55%;
-}
-
-.searchResults-brief {
-    position: absolute;
-    float: left;
-    margin-left: 48%;
-    margin-top: 2.6%;
-}
-
-#sequenceResult-brief-font {
-    font-size: 1.43vh;
-    color: black;
-    font-weight: normal;
-}
-
-.isolate-link-read-sequenceURL {
-    position: relative;
-    display: inline-block;
-    margin-left: 55%;
-    width: 20%;
-}
-.readResult-fastlinks {
-    position: relative;
-    display: inline-block;
-    margin-left: 2.5%;
-    margin-right: 2.5%;
-}
-
-.filterOptions-container {
-    position: absolute;
-    margin-left: 81%;
-    margin-top: 0.8%;
-    width: 9%;
-    height: 3%;
-    background-color: gainsboro;
-    border-radius: 8px;
-    border: 2px solid;
-}
-
-.filterOptions-container:hover {
-    background-color: white;
-}
-
-.filterOptions-text {
-    position: relative;
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-.filterOptions-options-container {
-    position: absolute;
-    border-radius: 15px;
-    border: 1px solid;
-    margin-left: 70%;
-    height: 26%;
-    width: 20%;
-    background-color: #f2f2f2;
-    z-index: 3;
-}
-
-.noSearchResults {
-    position: relative;
-    margin-top: 3%;
-    width: 100%;
-    justify-content: center;
-}
-
-.downloadOptions-container {
-    position: absolute;
-    margin-left: 77%;
-    margin-top: 2.45%;
-    width: 13%;
-    height: 3%;
-    background-color: gainsboro;
-    border-radius: 8px;
-    border: 2px solid;
-}
-
-.downloadOptions-container:hover {
-    background-color: white;
-}
-
-.downloadOptions-text {
-    position: relative;
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-.downloadOptions-options-container {
-    position: absolute;
-    border-radius: 15px;
-    border: 1px solid;
-    margin-left: 70%;
-    text-align: left;
-    height: 26%;
-    width: 25%;
-    background-color: #f2f2f2;
-    z-index: 3;
-}
-
-.downloadOptions-options-container-hidden {
-    position: absolute;
-    display: none;
-    border-radius: 15px;
-    border: 1px solid;
-    margin-left: 70%;
-    height: 22%;
-    width: 20%;
-    background-color: #f2f2f2;
-    z-index: 3;
+.isolate-link:hover + .isolate-summary {
+  pointer-events: none;
+  visibility: visible;
+  background-color: #f2f2f2;
+  border-radius: 15px;
+  border: 2px solid;
+  padding: .5rem;
 }
