--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,13 @@
 .App {
   text-align: center;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 70px);
+  position: absolute;
+}
+
+header {
+  padding-top: 0;
+  min-height: 70px;
 }
 
 #small-font {
