--- a/src/CSS/geneDisplay.css
+++ b/src/CSS/geneDisplay.css
@@ -1,3 +1,20 @@
+.acids {
+  position: relative;
+  word-break: keep-all;
+  white-space: nowrap;
+
+  letter-spacing: .4em;
+  padding: 0;
+  margin: 0;
+  font-size: 127%;
+}
+.acids > span {
+  position: absolute;
+  text-align: center;
+  margin-top: -.6em;
+  padding: 2px 6px 2px 2px;
+}
+
 .gene-table.differences .acid-A {
   background-color: #fff8f8;
   color: rgba(0,0,0,.4);
@@ -52,6 +69,7 @@
 .acid-N.different {
   box-shadow: inset 0 0 0 1px #000;
   font-weight: bold;
+  z-index: 1;
 }
 
 .row-different {
